[chi/crud-gorm] Add filtering to chi/crud-gorm
